feat: add a new async feature to allow async waiters

--- a/delay/Cargo.toml
+++ b/delay/Cargo.toml
@@ -15,3 +15,6 @@ keywords = ["delay", "waiter", "thread", "sleep", "timeout"]
 include = ["Cargo.toml", "src", "README.md", "LICENSE"]
 
 [dependencies]
+
+[features]
+async = []
