feat: implement async_wait for DelayComposer

--- a/delay/Cargo.toml
+++ b/delay/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "delay"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Hans Larsen <hans@larsen.online>"]
 edition = "2018"
 description = "A collection of trait and classes to make your thread wait (and timeout)."
@@ -15,6 +15,7 @@ keywords = ["delay", "waiter", "thread", "sleep", "timeout"]
 include = ["Cargo.toml", "src", "README.md", "LICENSE"]
 
 [dependencies]
+futures-util = { version = "0.3.13", optional = true }
 
 [features]
-async = []
+async = ["futures-util"]
