refactor: remove workspace cargo file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,21 @@
-[workspace]
-members = [
-    "delay"
-]
+[package]
+name = "delay"
+version = "0.3.2"
+authors = ["Hans Larsen <hans@larsen.online>"]
+edition = "2018"
+description = "A collection of trait and classes to make your thread wait (and timeout)."
+homepage = "https://github.com/hansl/rs-delay"
+repository = "https://github.com/hansl/rs-delay"
+documentation = "https://docs.rs/delay"
+
+license = "Apache-2.0"
+readme = "README.md"
+categories = []
+keywords = ["delay", "waiter", "thread", "sleep", "timeout"]
+include = ["Cargo.toml", "src", "README.md", "LICENSE"]
+
+[dependencies]
+futures-util = { version = "0.3.13", optional = true }
+
+[features]
+async = ["futures-util"]
